--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "yjs",
+  "name": "type-created-yjs",
   "version": "13.5.11",
-  "description": "Shared Editing Library",
+  "description": "Fork of yjs with https://github.com/yjs/yjs/pull/298/files merged",
   "main": "./dist/yjs.cjs",
   "module": "./dist/yjs.mjs",
   "types": "./dist/src/index.d.ts",
@@ -52,7 +52,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yjs/yjs.git"
+    "url": "https://github.com/YousefED/yjs/tree/patched-installable"
   },
   "keywords": [
     "Yjs",
